--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,7 @@ section{
 
 .home{
    min-height: 60vh;
-   background:url(../images/home-bg.png) no-repeat;
+   background:url(../images/home-bg.jpg) no-repeat;
    background-size: cover;
    background-position: center;
    display: flex;
